--- a/lms/package.json
+++ b/lms/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^5.5.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
